src/css/main.css
/**************************************************/
/* Components                                     */
/**************************************************/

.dot-container {
  --rem: 0.9rem;
  width: calc(var(--rem) * 4);
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  /* gap is 8px */
  gap: calc(var(--rem) * 0.8);
}

.dot {
  background-color: hsl(var(--clr-l-gray));
  /* one dot is 8px */
  width: calc(var(--rem) * 0.8);
  aspect-ratio: 1;
  border-radius: 50%;
  justify-self: center;
  align-self: center;
}

.eye {
  visibility: hidden;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: calc(var(--rem) * 13);
  height: calc(var(--rem) * 13);
  fill: hsl(var(--clr-white) / 0.5);
  z-index: 3;
}

/**************************************************/
/* Header                                         */
/**************************************************/

/* header styling */

.main-header {
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  background-color: hsl(var(--clr-white) / 1);
  z-index: 200;
}

.main-header .container {
  height: calc(var(--rem) * 5);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.main-header h1 {
  font-family: "Raleway", sans-serif;
  font-size: calc(var(--rem) * 2.2);
  font-weight: 700;
  color: hsl(var(--clr-l-gray));
}

.main-header .brand-link:hover {
    color: hsl(var(--clr-blue));
}

.main-header .dot-container {
  --rem: 0.6rem;
  cursor: pointer;
}

.main-header .dot-container:hover .dot {
    background-color: hsl(var(--clr-blue)) !important;
}

/* hero styling */
.hero {
  overflow: hidden;
}

.hero .container {
  /* to use a dot component as background */
  margin-top: calc(var(--rem) * 5);
  height: 100vh;
  position: relative;
  padding-block: calc(var(--padding) * 3);
  padding-inline: calc(var(--rem) * 5);
  line-height: 1.2;
  text-align: center;
}

.hero .container > * {
  margin-bottom: calc(var(--rem) * 3);
}

.hero-title {
  font-family: "Raleway", sans-serif;
  font-size: calc(var(--rem) * 5);
  font-weight: 500;
}

.hero .photo-container {
  position: relative;
  width: 18rem;
  height: 18rem;
  padding: 2px;
  margin-inline: auto;
  border-radius: 50%;
  overflow: hidden;
}

.hero .photo-container::after {
  content: '';
  position: absolute;
  inset: 0;
  background: linear-gradient(90deg, var(--clr-linear));
}

.hero-content {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  gap: var(--padding);
}

/* here style only dot component found on hero bg */
.hero-bg-dots {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translate(50%, -50%);
  z-index: -9999;
}

.hero-bg-dots > .dot-container {
  --rem: 2rem;
}

.hero .btn-projects {
  width: calc(var(--rem) * 16);
  height: auto;
  padding: 1.2rem;
  margin-inline: auto;
  margin-top: 5rem;
}

/* project section styling */

.projects-container .container {
  padding-top: 6rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
  gap: var(--padding);

  /* before main footer section needed */
  margin-bottom: var(--padding);
}

.projects-container .container > * {
  flex-basis: 100%;
  flex-grow: 1;
}

.projects-title {
  font-size: calc(var(--rem) * 3.6);
  margin-bottom: var(--padding);
}

.card {
  position: relative;
  background-color: hsl(var(--clr-l-gray));
  border-radius: calc(var(--rem));
  padding: var(--padding);
  overflow: hidden;
  /* use z-index: 0 for parent element, -1 for dot component */
  z-index: 0;
}

/* dot component as background pattern on left bottom corner */
.card > .dot-container {
  --rem: 3rem;
  position: absolute;
  left: 0;
  bottom: 0;
  transform: translate(-50%, 50%) rotate(45deg);
  z-index: -1;
}

.card-img--container {
  width: 100%;
  height: calc(var(--rem) * 40);
  /* to use a triangle dot component as absolute */
  position: relative;
  overflow: hidden;
  border-radius: var(--rem);
  margin-bottom: var(--padding);
  background-repeat: no-repeat;
  background-position: top center;
  background-size: cover;
  cursor: pointer;
  z-index: 0;
}

.card-img--container:hover > .eye {
  visibility: visible;
}

.card-img--container:hover::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: hsl(var(--clr-l-gray) / 0.7);
  z-index: 1;
}

.dots-triangle {
  position: absolute;
  top: calc(var(--rem));
  right: calc(var(--rem));
  z-index: 2;
}

.dot {
  transition: background-color 0.5s ease-in-out;
}

/* make 4th, 7th, and 8th dots invisible in dot component */
.dots-triangle .dot:nth-child(4),
.dots-triangle .dot:nth-child(7),
.dots-triangle .dot:nth-child(8) {
  background-color: transparent !important;
}

.dot-cross .dot {
  background-color: hsl(var(--clr-blue)) !important;
}

.dot-cross .dot:nth-child(2),
.dot-cross .dot:nth-child(4),
.dot-cross .dot:nth-child(6),
.dot-cross .dot:nth-child(8) {
  background-color: transparent !important;
}

.card-content--container {
  margin-bottom: var(--padding);
}

.card-title--container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: calc(var(--rem));
  margin-bottom: var(--padding);
}

.card-title--container .dot-container {
  --rem: 0.6rem;
}

.card-title {
  font-size: calc(var(--rem) * 3.6);
  padding-bottom: calc(var(--rem) * 0.5);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.card-detail {
  font-size: calc(var(--rem) * 1.8);
  line-height: 1.4;
  height: calc(var(--rem) * 12);
}

.card-btn--container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: var(--rem);
}

.btn {
  display: block;
  text-decoration: none;
  text-align: center;
  width: calc(var(--rem) * 12);
  height: calc(var(--rem) * 4);
  font-size: calc(var(--rem) * 1.8);
  letter-spacing: 0;
  border: none;
  border-radius: calc(var(--rem) / 2);
  padding-block: calc(var(--rem));
  cursor: pointer;
  transition: transform 0.2s;
}

.btn:hover {
  box-shadow: 5px 5px 0px 0 hsl(var(--clr-white) / 0.1);
  transform: translateY(-5%);
}

/* footer styling */

footer {
  background-color: hsl(var(--clr-blue));
}

footer .container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: calc(var(--rem) * 3);
  color: hsl(var(--clr-white));
  font-size: calc(var(--rem) * 1.8);
  text-align: center;
  letter-spacing: 0;
}

.menu-container {
  position: fixed;
  left: -6rem;
  top: 50vh;
  width: 6rem;
  transform: translateY(-50%);
  background: linear-gradient(180deg, var(--clr-linear));
  z-index: 9999;
  border-radius: 0 1rem 1rem 0;
  color: hsl(var(--clr-l-gray));
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  transition: transform 250ms ease-in-out;
}

.show-menu {
  transform: translateY(-50%) translateX(100%);
}

.social-media-list {
  margin: 0;
  padding: 1rem;
  list-style-type: none;
}

.social-media-list > li:not(:last-child) {
  margin-bottom: 1rem;
}

.bi {
  font-size: 4rem;
  color: hsl( var(--clr-dark));
  cursor: pointer;
  transition: color 250ms ease-in-out;
}

.bi:hover {
    color: hsl(var(--clr-white));
}

